fix overflow at about

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -144,6 +144,7 @@
         flex-direction: column;
         align-items: center;
         background-color: #171717;
+        overflow: hidden;
     }
 
     .picture {
@@ -254,6 +255,15 @@
     .content {
         width: calc(50% - 2rem);
     }
+
+    .bx-wrapper .bx-pager.bx-default-pager a {
+        background: #cfcfcf;
+    }
+
+    .bx-wrapper .bx-pager.bx-default-pager a.active {
+        background: #d6ff4e;
+    }
+    
 
     .show-me:nth-child(n) {
         transform: none;
